# sentc-api

./: .dockerignore  .env.sample  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rustfmt.toml  sentc.env.sample
.cargo/: config.toml
api/: Cargo.toml
server_api/: Cargo.toml  routes.yml
server_api/src/: lib.rs  main.rs  routes.rs
server_api/src/core/: api_err.rs  mod.rs
server_api/src/core/db/: mariadb.rs  mod.rs  sqlite.rs
server_api/src/user/: mod.rs  user_controller.rs  user_entities.rs  user_model.rs
server_crates/bin_dev/dummy_server/: Cargo.toml
server_crates/bin_dev/dummy_server/src/: main.rs
server_crates/bin_dev/server_api_init/: Cargo.toml
server_crates/bin_dev/server_api_init/src/: main.rs
server_crates/core/: Cargo.toml
server_crates/core/src/: error.rs  input_helper.rs  lib.rs  res.rs  url_helper.rs
server_crates/core/src/cache/: array_cache.rs  mod.rs
server_crates/core/src/db/: mariadb.rs  mod.rs  sqlite.rs
server_crates/core/src/email/: mod.rs  send_mail.rs
server_crates/core/src/file/: local_storage.rs  mod.rs
server_crates/core/tests/: tests_1_db.rs
server_crates/core_macros/: Cargo.toml
server_crates/core_macros/src/: lib.rs
server_crates/helper/dummy_server/: Cargo.toml
server_crates/helper/dummy_server/src/: test_external_file.rs
server_crates/server_all/: Cargo.toml
server_crates/server_all/src/: main.rs
server_crates/server_api/: Cargo.toml  routes.yml
server_crates/server_api/src/: lib.rs  main.rs  routes.rs
server_crates/server_api/src/content_management/: content_controller.rs  content_entity.rs  content_model.rs  content_model_edit.rs  content_service.rs  mod.rs
server_crates/server_api/src/content_searchable/: mod.rs  searchable_controller.rs  searchable_entities.rs  searchable_model.rs  searchable_service.rs
server_crates/server_api/src/core/: api_err.rs  api_res.rs  input_helper.rs  jwt.rs  mod.rs  url_helper.rs
server_crates/server_api/src/customer/: customer_controller.rs  customer_entities.rs  customer_model.rs  customer_util.rs  mod.rs  send_mail.rs
server_crates/server_api/src/customer_app/: app_controller.rs  app_entities.rs  app_model.rs  app_service.rs  app_util.rs  mod.rs
server_crates/server_api/src/ext/: mod.rs
server_crates/server_api/src/file/: file_controller.rs  file_entities.rs  file_model.rs  file_service.rs  file_worker.rs  mod.rs
server_crates/server_api/src/group/: group_controller.rs  group_entities.rs  group_key_rotation_controller.rs  group_key_rotation_model.rs  group_light_controller.rs  group_model.rs  group_service.rs  group_user_controller.rs  group_user_mod.rs  group_user_model.rs  mod.rs
server_crates/server_api/src/key_management/: key_controller.rs  key_entity.rs  key_model.rs  mod.rs
server_crates/server_api/src/middleware/: app_access.rs  app_token.rs  group.rs  jwt.rs  mod.rs
server_crates/server_api/src/user/: captcha.rs  jwt.rs  mod.rs  otp.rs  user_controller.rs  user_entities.rs  user_model.rs  user_service.rs
server_crates/server_api/src/util/: api_res.rs  mod.rs
server_crates/server_api/tests/: app_test.rs  test_fn.rs  tests_1_customer.rs  tests_2_app.rs  tests_2_app_2.rs  tests_3_user.rs  tests_3_user_2.rs  tests_3_user_3.rs  tests_4_group.rs  tests_4_group_2.rs  tests_4_group_3.rs  tests_4_group_4.rs  tests_4_group_5.rs  tests_5_content.rs  tests_5_content_searchable.rs  tests_5_key.rs  tests_5_searchable.rs  tests_5_sortable.rs  tests_6_file.rs  tests_7_file_external.rs  tests_9_customer_special.rs  tests_9_file_special.rs  user_tests.rs
server_crates/server_api_all/: Cargo.toml
server_crates/server_api_all/src/: main.rs
server_crates/server_api_all/tests/: test_fn.rs  tests_2_app.rs  tests_2_app_2.rs  tests_3_user.rs  tests_3_user_3.rs  tests_4_group.rs  tests_4_group_2.rs  tests_4_group_5.rs  tests_5_content.rs  tests_5_key.rs  tests_5_sortable.rs  tests_6_file.rs  tests_9_file_special.rs
server_crates/server_api_common/: Cargo.toml
server_crates/server_api_common/src/: app.rs  customer.rs  lib.rs
server_crates/server_api_common/src/customer_app/: app_entities.rs  app_model.rs  mod.rs
server_crates/server_api_common/src/file/: file_model.rs  mod.rs
server_crates/server_api_common/src/group/: group_entities.rs  group_model.rs  mod.rs
server_crates/server_api_customer/: Cargo.toml  routes.yml
server_crates/server_api_customer/src/: captcha.rs  lib.rs  main.rs  mw.rs  routes.rs
server_crates/server_api_file/: Cargo.toml  routes.yml
server_crates/server_api_file/src/: file_controller.rs  file_model.rs  file_service.rs  file_worker.rs  lib.rs  main.rs  routes.rs
server_crates/server_api_init/: Cargo.toml
server_crates/server_api_init/src/: main.rs
server_crates/server_api_integration_tests/: Cargo.toml
server_crates/server_api_integration_tests/tests/: test_fn.rs  tests_1_customer.rs  tests_2_app.rs  tests_3_user.rs  tests_3_user_2.rs  tests_3_user_3.rs  tests_4_group.rs  tests_4_group_2.rs  tests_4_group_3.rs  tests_4_group_4.rs  tests_4_group_5.rs  tests_4_group_6.rs  tests_5_content.rs  tests_5_key.rs  tests_5_searchable.rs  tests_5_sortable.rs  tests_6_file.rs  tests_9_customer_special.rs  tests_9_file_special.rs
server_crates/server_api_token/: Cargo.toml
server_crates/server_api_token/src/: main.rs
server_crates/server_dashboard/: Cargo.toml
server_crates/server_dashboard/client/: package-lock.json  package.json
server_crates/server_dashboard/server_dashboard_backend/: Cargo.toml
server_crates/server_dashboard/server_dashboard_frontend/: Cargo.toml  package-lock.json
server_crates/server_dashboard/src/: lib.rs  main.rs
server_crates/server_dashboard_backend/: Cargo.toml
server_crates/server_dashboard_backend/src/: lib.rs
server_crates/server_key_store/: Cargo.toml
server_crates/server_key_store/src/: lib.rs  local_key_store.rs  s3_storage.rs
server_crates/server_migration/: Cargo.toml
server_crates/server_migration/src/: main.rs
server_crates/server_rest_api/: Cargo.toml
server_crates/server_rest_api/src/: main.rs
server_crates/worker/worker_manual/: Cargo.toml
(+104 files in other folders)
