[workspace]
members = [
    # bin
    "server_crates/bin/server_bin",
    "server_crates/bin/worker/worker_manual",
    "server_crates/bin/worker/worker_cron",
    "server_crates/bin/sentc_api_init",
    "server_crates/bin/sentc_api_key_gen",

    # bin for dev
    "server_crates/bin/server_dev_bin/server_api_route_builder",
    #"server_crates/bin/server_dev_bin/server_api_init",
    #"server_crates/bin/server_dev_bin/dummy_server",

    # lib
    "sdk-common",
    "server_crates/server_api",
    "server_crates/server_api_common",
    "server_crates/encrypted_at_rest_root"
]

[workspace.dependencies]
# server impl
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.2"

rustgram = "0.1.8"

# dotenv vars
dotenv = "0.15.0"

# for caching trait
async-trait = "0.1.56"

rustgram-server-util = {git= "https://gitlab.com/grammm/rustgram/rustgram-server-util.git", rev = "3bbbda45ffd669a809f6de6920b9fc214d83b6e0", default-features = false, features = ["derive_macro", "static_var"]}

#_______________________________________________________________________________________________________________________

#sentc-crypto = {git = "https://github.com/sentclose/sentc.git", rev="49b7b49a7d0c23d3fa7cf247bb4356ae573f5313", default-features = false, features = ["rust", "server"]}
sentc-crypto = {path = "../../sdk/crypto", default-features = false, features = ["rust", "server"]} # for local dev

#sentc-crypto-full = {git = "https://github.com/sentclose/sentc.git", rev="49b7b49a7d0c23d3fa7cf247bb4356ae573f5313", default-features = false, features = ["rust", "rustls"]}
sentc-crypto-full = {path = "../../sdk/crypto_full", default-features = false, features = ["rust", "rustls"]} # for local dev

#sentc-crypto-light = {git = "https://github.com/sentclose/sentc.git", rev="49b7b49a7d0c23d3fa7cf247bb4356ae573f5313", default-features = false, features = ["rust"]}
sentc-crypto-light = {path = "../../sdk/crypto_light", default-features = false, features = ["rust"]} # for local dev

#sentc-crypto-light-full = {git = "https://github.com/sentclose/sentc.git", rev="49b7b49a7d0c23d3fa7cf247bb4356ae573f5313", default-features = false, features = ["rust", "rustls"]}
sentc-crypto-light-full = {path = "../../sdk/crypto_light_full", default-features = false, features = ["rust", "rustls"]} # for local dev

#_______________________________________________________________________________________________________________________
# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
