[workspace]
resolver = "2"
members = [
    # bin
    "server_crates/bin/worker/worker_manual",
    "server_crates/bin/worker/worker_cron",
    "server_crates/bin/sentc_api_init",
    "server_crates/bin/sentc_api_key_gen",
    # bin for dev
    "server_crates/bin/server_dev_bin/server_api_route_builder",
    #"server_crates/bin/server_dev_bin/server_api_init",
    #"server_crates/bin/server_dev_bin/dummy_server",
    "server_crates/server_api_integration_tests",
    # lib
    "sdk-common",
    "server_crates/server_api",
    "server_crates/server_api_all",
    "server_crates/server_api_common",
    "server_crates/server_api_customer",
    "server_crates/server_api_file",
    "server_crates/server_dashboard_backend",
    "server_crates/server_dashboard_common",
    "server_crates/encrypted_at_rest_root"
]

[workspace.dependencies]
# server impl
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.2"

rustgram = "0.2.1"

# dotenv vars
dotenv = "0.15.0"

# for caching trait
async-trait = "0.1.56"

rustgram-server-util = { git = "https://gitlab.com/grammm/rustgram/rustgram-server-util.git", rev = "0a9db6fbcca35f386aa55e7cb64ad5671360d42e", default-features = false, features = ["derive_macro", "static_var"] }

#_______________________________________________________________________________________________________________________

sentc-crypto = { git = "https://github.com/sentclose/sentc.git", rev = "38499f0d7e79a39f19a1f63d943217913ecf9d7a", default-features = false, features = ["server"] }
#sentc-crypto = { path = "../../sdk/crypto", default-features = false, features = ["server"] } # for local dev

sentc-crypto-light = { git = "https://github.com/sentclose/sentc.git", rev = "38499f0d7e79a39f19a1f63d943217913ecf9d7a", default-features = false }
#sentc-crypto-light = { path = "../../sdk/crypto_light", default-features = false } # for local dev

sentc-crypto-std-keys = { git = "https://github.com/sentclose/sentc.git", rev = "38499f0d7e79a39f19a1f63d943217913ecf9d7a", features = ["full"] }
#sentc-crypto-std-keys = { path = "../../sdk/crypto_keys/crypto_std_keys", features = ["full"] } # for local dev

sentc-crypto-fips-keys = { git = "https://github.com/sentclose/sentc.git", rev = "38499f0d7e79a39f19a1f63d943217913ecf9d7a", features = ["full"] }
#sentc-crypto-fips-keys = { path = "../../sdk/crypto_keys/crypto_fips_keys", features = ["full"] } # for local dev

sentc-crypto-rec-keys = { git = "https://github.com/sentclose/sentc.git", rev = "38499f0d7e79a39f19a1f63d943217913ecf9d7a", features = ["full"] }
#sentc-crypto-rec-keys = { path = "../../sdk/crypto_keys/crypto_rec_keys", features = ["full"] } # for local dev

#_______________________________________________________________________________________________________________________
# json handling
serde_json = { version = "1.0.81", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

ring = { version = "0.16.5", features = ["std"] }

base64 = "0.13.0"

rand = "0.8.5"

chrono = "0.4"

# jwt handling
jsonwebtoken = { version = "8.1.1", default-features = false }

reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }

totp-rs = "5.0"