[package]
name = "server_api"
version = "0.1.0"
edition = "2021"
default-run = "server_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the server outputs for the frontend to handle
sentc-crypto-common = {version = "0.1.0", git = "https://gitlab+deploy-token-1203426:yEvfooDrnL3d4na83Yix@gitlab.com/sentclose/sentc/sdk.git"}

# server impl
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.2"

# to stream the input body
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }

# mysql db, V0.29 is needed because of the bulk insert when handling params
mysql_async = { version = "0.29.0", optional = true }

# sqlite
deadpool-sqlite = { version= "0.4.0", optional = true }
rusqlite = { version = "0.27.0", features = ["bundled"], optional = true }

# id
uuid = {version="1.1.2", features= ["v4", "fast-rng"]}

# dotenv vars
dotenv = "0.15.0"

[features]
default = ["mysql"]
mysql = ["mysql_async"]
sqlite = ["deadpool-sqlite","rusqlite"]