[package]
name = "server-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server-core-macros = {version = "0.1.0", path = "../core_macros", optional = true}

rustgram = "0.1.5"

hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.2"

# dotenv vars
dotenv = "0.15.0"

# for caching trait
async-trait = "0.1.56"

#_______________________________________________________________________________________________________________________
# to stream the input body
bytes = "1.1.0"
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }

#_______________________________________________________________________________________________________________________
# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

#_______________________________________________________________________________________________________________________
# mysql db
mysql_async = { version = "0.31.0", optional = true, default-features = false, features = ["default-rustls"]}
mysql_common = { version="0.29.0", optional = true }

# sqlite
deadpool-sqlite = { version= "0.5.0", optional = true }
rusqlite = { version = "0.28.0", features = ["bundled"], optional = true }

#_______________________________________________________________________________________________________________________
#send emails
lettre = { version = "0.10.0-rc.6", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"], optional = true }

#_______________________________________________________________________________________________________________________
#regex
regex = "1.6.0"

#_______________________________________________________________________________________________________________________

[dev-dependencies]
# id
uuid = {version="1.1.2", features= ["v4", "fast-rng"]}

[features]
default = ["mysql"]

mysql = ["mysql_async","mysql_common"]
sqlite = ["deadpool-sqlite","rusqlite"]

# When enabled send the custumor resgistration mail
send_mail = ["lettre"]

derive_macro = ["server-core-macros"]