[package]
name = "server-core-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "server_core_macros"
proc-macro = true

[dependencies]
syn = { version = "*", features = ["extra-traits"] }
quote = "1.0"