[package]
name = "server_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the server outputs for the frontend to handle
sentc-crypto-common = {path = "../../sdk-common" }

server_dashboard_common = {path = "../server_dashboard_common", default-features = false, features = ["server"]}

encrypted_at_rest_root = {path = "../encrypted_at_rest_root"}

rustgram-server-util = {workspace = true}

# server impl
hyper = {workspace = true}
tokio = {workspace = true}

rustgram = {workspace = true}

# dotenv vars
dotenv = {workspace = true}

# for caching trait
async-trait = {workspace = true}

#_______________________________________________________________________________________________________________________
# json handling
serde_json = {workspace = true}
serde = {workspace = true}

chrono = "0.4"

#_______________________________________________________________________________________________________________________
# jwt handling
jsonwebtoken = { version = "8.1.1", default-features = false }
# ring crypto to crate jwt keys
ring = { version = "0.16.5", features = ["std"] }
# base64 to encode and decode the jwt key
base64 = "0.13.0"

rand = "0.8.5"

#_______________________________________________________________________________________________________________________
# totp handling

# base32 to encode the totp secret to make it more readable for humans than base64
base32 = "0.4.0"

totp-rs = "5.0"

#_______________________________________________________________________________________________________________________
# captcha
captcha = "0.0.9"

#_______________________________________________________________________________________________________________________
#send emails
lettre = { version = "0.10.0-rc.6", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"], optional = true }

#_______________________________________________________________________________________________________________________
#regex
regex = "1.6.0"

#_______________________________________________________________________________________________________________________
# salt creation on server
# to get it from ssh: write this in your ~/.cargo/config.toml:
# [net]
# git-fetch-with-cli = true
sentc-crypto = {workspace=true}

reqwest = {version = "0.11.18", default-features = false, features=["rustls-tls"]}
#_______________________________________________________________________________________________________________________

[dev-dependencies]

sentc-crypto = {workspace=true, features=["server_test"]}
sentc-crypto-light = {workspace=true, features=["server_test"]}
sentc-crypto-full  = {workspace=true}
sentc-crypto-light-full.workspace=true

[features]
default = ["mysql"]
mysql = ["rustgram-server-util/mysql","server_dashboard_common/mysql"]
sqlite = ["rustgram-server-util/sqlite","server_dashboard_common/sqlite"]

# When enabled send the custumor resgistration mail
send_mail = ["lettre"]