[package]
name = "server_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the server outputs for the frontend to handle
sentc-crypto-common = { path = "../../sdk-common" }

server_api_common = { path = "../server_api_common", default-features = false }

server_key_store = { path = "../server_key_store" }

encrypted_at_rest_root = { path = "../encrypted_at_rest_root" }

rustgram-server-util = { workspace = true }

# server impl
hyper = { workspace = true }
tokio = { workspace = true }

rustgram = { workspace = true }

#_______________________________________________________________________________________________________________________
# json handling
serde = { workspace = true }

chrono.workspace = true

#_______________________________________________________________________________________________________________________

base64.workspace = true

rand.workspace = true

#_______________________________________________________________________________________________________________________
# totp handling

# base32 to encode the totp secret to make it more readable for humans than base64
base32 = "0.4.0"

totp-rs.workspace = true

#_______________________________________________________________________________________________________________________
# salt creation on server
# to get it from ssh: write this in your ~/.cargo/config.toml:
# [net]
# git-fetch-with-cli = true
sentc-crypto = { workspace = true }

sentc-crypto-std-keys.workspace = true
sentc-crypto-fips-keys = { workspace = true, optional = true }
sentc-crypto-rec-keys = { workspace = true, optional = true }

[features]
default = ["mysql"]
mysql = ["rustgram-server-util/mysql", "server_api_common/mysql"]
sqlite = ["rustgram-server-util/sqlite", "server_api_common/sqlite"]

external_c_keys = ["sentc-crypto-fips-keys", "sentc-crypto-rec-keys"]