[package]
name = "server_api_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the server outputs for the frontend to handle
sentc-crypto-common = {version = "0.1.0", path = "../../sdk-common" }

# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

server-core = {version = "0.1.0", default-features = false, optional = true, path = "../core"}

mysql_async = { version = "0.30.0", optional = true }
rusqlite = { version = "0.28.0", features = ["bundled"], optional = true }

[features]
default=[]

server=["server-core"]
mysql = ["server-core/mysql","mysql_async"]
sqlite=["server-core/sqlite","rusqlite"]