[package]
name = "server_api_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the server outputs for the frontend to handle
sentc-crypto-common = {path = "../../sdk-common"}

# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

rustgram-server-util = {workspace = true, optional = true}

[features]
default=["client"]
client = []

server=["rustgram-server-util"]
mysql = ["rustgram-server-util/mysql"]
sqlite=["rustgram-server-util/sqlite"]