[package]
name = "server_api_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentc-crypto-common = {version = "0.1.0", path = "../../sdk-common" }

server_api_common = {version = "0.1.0", path = "../server_api_common", default-features = false}

reqwest = { version = "0.11.11", features = ["json","blocking"] }

# dotenv vars
dotenv = "0.15.0"

# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }