[package]
name = "server_api_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server_api_common = {version = "0.1.0", path = "../server_api_common", default-features = false}

server_api = {version = "0.1.0", path = "../server_api", default-features = false, features = ["embedded"]}

tokio = { version = "1", features = ["full"] }

# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[features]
default = ["mysql"]
mysql = ["server_api/mysql"]
sqlite = ["server_api/sqlite"]