[package]
name = "server_key_store"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
async-trait = "0.1.56"
rustgram-server-util.workspace = true

aws-config = { version = "1.8.0", optional = true }
aws-sdk-s3 = { version = "1.94.0", optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }

[features]
s3_key_storage = ["serde_json", "aws-config", "aws-sdk-s3"]