[package]
name = "dummy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server-core = {version = "0.1.0", path = "../../core", default-features = false}

# server impl
hyper = {workspace = true}
tokio = {workspace = true}

rustgram = {workspace = true}