[package]
name = "server_api_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server_api_common = {version = "0.1.0", path = "../../server_api_common", default-features = false}

server_api = {version = "0.1.0", path = "../../server_api", default-features = false, features = ["embedded"]}

tokio = {workspace = true}

# json handling
serde_json = {workspace = true}
serde = {workspace = true}

[features]
default = ["mysql"]
mysql = ["server_api/mysql"]
sqlite = ["server_api/sqlite"]