[package]
name = "dummy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server-core = {version = "0.1.0", path = "../../core", default-features = false}

sentc-crypto = {version = "0.1.0", git = "ssh://git@gitlab.com/sentclose/sentc/sdk.git", default-features = false, features = ["rust", "server", "server_test"]}

# server impl
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

rustgram = "0.1.7"